--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,13 +10,14 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
-    "react": "^19.0.0",
+    "react": "^18.3.1",
     "react-bootstrap": "^2.10.9",
-    "react-dom": "^19.0.0",
+    "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
     "react-router-bootstrap": "^0.26.3",
     "react-router-dom": "^7.2.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.3",
     "use-reducer-logger": "^1.0.2",
     "web-vitals": "^2.1.4"
   },
