--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,12 @@
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "framer-motion": "^12.4.7",
+    "globe.gl": "^2.41.1",
     "lucide-react": "^0.476.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^18.3.1",
+    "react-globe.gl": "^2.33.1",
     "react-helmet-async": "^2.0.5",
     "react-icons": "^5.5.0",
     "react-router-bootstrap": "^0.26.3",
@@ -22,6 +24,7 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^11.0.3",
     "swiper": "^11.2.4",
+    "three": "^0.174.0",
     "use-reducer-logger": "^1.0.2",
     "web-vitals": "^2.1.4"
   },
