--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,12 +4,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-three/drei": "^10.0.4",
+    "@react-three/fiber": "^9.0.4",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
+    "d3-ease": "^1.0.7",
+    "d3-geo": "^3.1.0",
+    "d3-interpolate": "^3.0.1",
+    "d3-selection": "^3.0.0",
+    "d3-timer": "^3.0.1",
+    "d3-transition": "^3.0.1",
     "framer-motion": "^12.4.7",
     "globe.gl": "^2.41.1",
     "lucide-react": "^0.476.0",
@@ -22,6 +30,7 @@
     "react-router-bootstrap": "^0.26.3",
     "react-router-dom": "^7.2.0",
     "react-scripts": "5.0.1",
+    "react-simple-maps": "^2.3.0",
     "react-toastify": "^11.0.3",
     "swiper": "^11.2.4",
     "three": "^0.174.0",
