--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "react-globe.gl": "^2.33.1",
     "react-helmet-async": "^2.0.5",
     "react-icons": "^5.5.0",
+    "react-redux": "^9.2.0",
     "react-router-bootstrap": "^0.26.3",
     "react-router-dom": "^7.2.0",
     "react-scripts": "5.0.1",
