code upload main image

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,6 @@
 MONGODB_URI=mongodb://localhost:27017/gobinthan-garments
 JWT_SECRET=somethingsecret
+CLOUDINARY_CLOUD_NAME=dcrjxcysv
+CLOUDINARY_API_KEY=774149619695431
+CLOUDINARY_URL=CLOUDINARY_URL=cloudinary://774149619695431:U1M6mtAxbDAOz10P3nmVrdueGGA@dcrjxcysv
+CLOUDINARY_API_SECRET=U1M6mtAxbDAOz10P3nmVrdueGGA
