--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,10 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.10.1",
     "multer": "^1.4.5-lts.1",
-    "streamifier": "^0.1.1"
+    "nodemailer": "^6.10.0",
+    "pdfkit": "^0.16.0",
+    "streamifier": "^0.1.1",
+    "twilio": "^5.5.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
