--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "express": "^4.21.2",
     "express-async-handler": "^1.2.0",
     "html-pdf": "^3.0.1",
+    "html2pdf.js": "^0.10.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.10.1",
     "multer": "^1.4.5-lts.1",
