--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "d3-transition": "^3.0.1",
     "framer-motion": "^12.4.7",
     "globe.gl": "^2.41.1",
+    "html2pdf.js": "^0.10.3",
     "lucide-react": "^0.476.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.9",
