--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "framer-motion": "^12.4.7",
     "globe.gl": "^2.41.1",
     "html2pdf.js": "^0.10.3",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.476.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.9",
