--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-google-maps/api": "^2.20.6",
     "@react-three/drei": "^10.0.4",
     "@react-three/fiber": "^9.1.0",
     "@testing-library/dom": "^10.4.0",
